tests/ui/type-alias-impl-trait/structural-match-no-leak.stderr
error: `Bar` cannot be used in patterns
  --> $DIR/structural-match-no-leak.rs:16:9
   |
LL |         LEAK_FREE => (),
   |         ^^^^^^^^^

error: aborting due to 1 previous error

